--- a/css/index.css
+++ b/css/index.css
@@ -21,3 +21,23 @@ a {color:ee7600}
 .hoverContainer:hover .overlay{opacity:.2}
 #chessppLogo{width:500; height:100}
 .hoverImage{width:100%;height:100%; display:block}
+
+#sidenav{
+	float: left;
+	padding-left: 20px;
+	width: 110px;
+}
+
+#mainContent{
+	margin: auto;
+
+}
+
+#creationsBox{
+	margin-top: 50px;
+}
+
+#logoBanner{
+	height : 50%;
+	min-height: 310px;
+}
